src/app/_components/Footer/FooterComponent/index.module.scss
@use '../../../_css/queries.scss' as *;

.footer {
  background-color: var(--theme-elevation-50);
  color: var(--theme-elevation-1000);

  @include small-break {
    padding: calc(var(--base) * 2) 0;
  }
}

.inclusions {
  display: grid;
  justify-content: center;
  padding: 60px 0;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;

  li {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;

    .title {
      margin-bottom: 0;
    }
  }

  @include large-break {
    grid-template-columns: repeat(2, 1fr);
      padding: 30px 0;

  }

  @include extra-small-break {
    padding-top: 0;
    grid-template-columns: 1fr;
  }
}

.icon {
  margin-bottom: 16px;
}

.logoContainer {
  margin-bottom: calc(var(--base) * 2);
}

.wrap {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: calc(var(--base) / 2) var(--base);

  @include small-break {
    margin-top: 30px;
    flex-direction: column;
    text-align: center;
  }
}

.copyright {
  margin: 0;
}

.hr {
  border-color: var(--color-white-500-20);
}

.socialLinks {
  display: flex;
  gap: 20px;
}

.socialLinkItem {
  width: 100%;
}

.socialIcon {
  width: 24px;
  height: 24px;
}

.hide {
  display: none;
}

